--- a/loggly4j-logback/pom.xml
+++ b/loggly4j-logback/pom.xml
@@ -45,7 +45,31 @@
 					<target>${maven.compile.target}</target>
 				</configuration>
 			</plugin>
-
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.1.2</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
+	
+	<distributionManagement>
+		<repository>
+			<id>xsalefter-maven-release</id>
+			<url>https://github.com/xsalefter/xsalefter-maven-repo/raw/master/releases</url>
+		</repository>
+		<snapshotRepository>
+			<id>xsalefter-maven-snapshot</id>
+			<url>https://github.com/xsalefter/xsalefter-maven-repo/raw/master/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
